Prevent flicker when exiting fullscreen by synchronizing transactions. https://bugs.webkit.org/show_bug.cgi?id=140897

Patch by Jeremy Jones <jeremyj@apple.com> on 2015-02-03
Reviewed by Tim Horton.

Source/WebCore:

Synchronize across CAContexts when moving the video layer between layer hierarchies.
Normally transactions involving multiple CAContexts are not synchronized.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::setVideoFullscreenLayer):
* platform/spi/cocoa/QuartzCoreSPI.h: add additional CAContext SPI declarations.

Source/WebKit2:

Flush transactions before removing layerHost. This allows existing transactions to be completed before the hosting layer disappears.

* UIProcess/ios/WebVideoFullscreenManagerProxy.mm:
(WebKit::WebVideoFullscreenManagerProxy::didCleanupFullscreen):

Canonical link: https://commits.webkit.org/159225@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179574 268f45cc-cd09-0410-ab3c-d52691b4dbfc